# Interpose

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yaml  kind.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 04ef9f18fb8f_create_audit_entries.py
charts/interpose/: Chart.yaml  README.md  values-dev.yaml  values.yaml
concepts/: 00-claude-md-files.md  01-what-is-mcp.md  02-interpose-gateway-overview.md  02-sentinel-gateway-overview.md  03-sla-slo-latency-budgets.md  04-aml-ofac-glossary.md  05-python-envs-and-uv.md  06-containers-and-docker.md  07-what-is-kubernetes.md  08-terraform-and-iac.md  09-mcp-handshake-and-transports.md  10-open-data-licensing.md  11-git-branching-and-github-flow.md  12-oss-community-health-files.md  13-session-continuity-and-progress-logs.md  14-spark-and-pyspark.md  15-fastapi-and-the-naive-proxy.md  16-policy-engine-composition.md  17-fail-closed-policy-enforcement.md  18-postgres-sqlalchemy-alembic.md  19-hash-chained-audit-log.md  20-cli-with-typer.md  21-redis-and-the-hitl-hold.md  22-langgraph-fundamentals-and-supervisor-routing.md  23-control-plane-event-bus-and-feature-engineering.md  24-narrative-generation-with-a-real-llm.md  25-remaining-control-plane-agents.md  26-helm-and-the-interpose-chart.md  INDEX.md
config/: upstreams.yaml
config/policies/: hello-echo-denylist.yaml  hello-echo-hitl-timeout.yaml  hello-echo-hitl.yaml  hello-echo-throttle.yaml
data/: CITATIONS.md  README.md
docs/: INTERPOSE_SCOPING.md  ROADMAP.md  SENTINEL_SCOPING.md
docs/project/: SESSION_LOG.md
examples/hello-mcp-echo/: README.md  client.py  server.py
examples/hello-mcp-http-echo/: README.md  server.py
scripts/: dev-down.sh  dev-up.sh
src/interpose/: config.py
tests/: conftest.py
tests/integration/: conftest.py  test_control_plane_graph.py  test_gateway_audit.py  test_gateway_control_plane.py  test_gateway_edge_cases.py  test_gateway_health.py  test_gateway_hitl.py  test_gateway_naive_forward.py  test_gateway_policy.py  (+1 more)
(+60 files in other folders)
